Make it possible to deploy Utakata to Heroku

--- a/config/database.yml
+++ b/config/database.yml
@@ -48,7 +48,9 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
+  adapter: postgresql
+  encoding: utf8
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   database: utakata_production
   username: utakata
   password: <%= ENV['UTAKATA_DATABASE_PASSWORD'] %>
