--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@
 
 # Ignore encrypted secrets key file.
 config/secrets.yml.key
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
