--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
-    "stimulus": "^1.1.0"
+    "stimulus": "^1.1.0",
+    "striptags": "^3.1.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
