--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,8 @@ Metrics/MethodLength:
   Enabled: false
 Style/AsciiComments:
   Enabled: false
+Style/ClassAndModuleChildren:
+  Enabled: false
 Style/Documentation:
   Enabled: false
 Style/MultilineTernaryOperator:
