JPEG画像のExif情報を除去する

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,8 @@ AllCops:
     - 'node_modules/node-sass/src/libsass/**/*'
 Bundler/OrderedGems:
   Enabled: false
+Layout/AlignParameters:
+  EnforcedStyle: with_fixed_indentation
 Metrics/AbcSize:
   Enabled: false
 Metrics/BlockLength:
