--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "utakata",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "3.5",
+    "@rails/webpacker": ">=4.0.0",
     "stimulus": ">=1.1.0",
     "striptags": ">=3.1.1"
   },
