--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,11 +6,11 @@ AllCops:
     - 'node_modules/node-sass/src/libsass/**/*'
 Bundler/OrderedGems:
   Enabled: false
+Layout/LineLength:
+  Enabled: false
 Metrics/AbcSize:
   Enabled: false
 Metrics/BlockLength:
-  Enabled: false
-Metrics/LineLength:
   Enabled: false
 Metrics/MethodLength:
   Enabled: false
