--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": ">=4.0.0",
+    "rails-ujs": ">=5.2.4-1",
     "stimulus": ">=1.1.0",
-    "striptags": ">=3.1.1"
+    "striptags": ">=3.1.1",
+    "turbolinks": ">=5.2.0"
   },
   "devDependencies": {
     "webpack-dev-server": ">=3.1.11"
