--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "turbolinks": ">=5.2.0"
   },
   "devDependencies": {
+    "babel-eslint": ">=10.0.3",
+    "eslint": ">=6.8.0",
+    "eslint-loader": ">=3.0.3",
     "webpack-dev-server": ">=3.1.11"
   }
 }
