--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "utakata",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": ">=5.12.0",
     "@rails/webpacker": ">=4.0.0",
     "rails-ujs": ">=5.2.4-1",
     "stimulus": ">=1.1.0",
