--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-free": ">=5.12.0",
     "@rails/webpacker": ">=4.0.0",
     "bootstrap": ">=4.4.1",
+    "jquery": ">=3.4.1",
     "popper.js": ">=1.16.0",
     "rails-ujs": ">=5.2.4-1",
     "stimulus": ">=1.1.0",
