--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "@fortawesome/fontawesome-free": ">=5.12.0",
     "@rails/webpacker": ">=4.0.0",
     "bootstrap": ">=4.4.1",
-    "jquery": ">=3.4.1",
-    "popper.js": ">=1.16.0",
+    "bootstrap.native": ">=2.0.27",
+    "bootstrap.native-loader": ">=2.0.0",
     "rails-ujs": ">=5.2.4-1",
     "stimulus": ">=1.1.0",
     "striptags": ">=3.1.1",
-    "toastr": ">=2.1.4",
     "turbolinks": ">=5.2.0",
+    "uglify-js": ">=3.7.3",
     "webpack": ">=4.41.5"
   },
   "devDependencies": {
