--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@fortawesome/fontawesome-free": ">=5.12.0",
     "@rails/webpacker": ">=4.0.0",
     "bootstrap": ">=4.4.1",
-    "bootstrap.native": ">=2.0.27",
+    "bootstrap.native": "^2.0.27",
     "bootstrap.native-loader": ">=2.0.0",
     "rails-ujs": ">=5.2.4-1",
     "stimulus": ">=1.1.0",
