--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -29,5 +29,5 @@ jobs:
         ruby-version: 2.7
     - name: Install dependencies
       run: bundle install
-    - name: Run tests
+    - name: Run RuboCop
       run: rubocop
