--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,4 +25,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: yarn install
-    - run: eslint 'app/**/*.js'
+    - run: ./node_modules/eslint/bin/eslint.js 'app/**/*.js'
