--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,4 +25,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: yarn install
-    - run: ./node_modules/eslint/bin/eslint.js --ext .js app
+    - run: ./node_modules/eslint/bin/eslint.js --ext .js app config
