bundle updaete, yarn ungrade

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,6 +28,10 @@ Lint/RaiseException:
   Enabled: true
 Lint/StructNewOverride:
   Enabled: true
+Style/AccessorGrouping:
+  Enabled: true
+Style/BisectedAttrAccessor:
+  Enabled: true
 Style/ExponentialNotation:
   Enabled: true
 Style/HashEachMethods:
@@ -35,6 +39,8 @@ Style/HashEachMethods:
 Style/HashTransformKeys:
   Enabled: true
 Style/HashTransformValues:
+  Enabled: true
+Style/RedundantAssignment:
   Enabled: true
 Style/RedundantFetchBlock:
   Enabled: true
