--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -22,6 +22,8 @@ Layout/SpaceAroundMethodCallOperator:
   Enabled: true
 Lint/DeprecatedOpenSSLConstant:
   Enabled: true
+Lint/DuplicateElsifCondition:
+  Enabled: true
 Lint/MixedRegexpCaptureTypes:
   Enabled: true
 Lint/RaiseException:
@@ -30,11 +32,19 @@ Lint/StructNewOverride:
   Enabled: true
 Style/AccessorGrouping:
   Enabled: true
+Style/ArrayCoercion:
+  Enabled: true
 Style/BisectedAttrAccessor:
+  Enabled: true
+Style/CaseLikeIf:
   Enabled: true
 Style/ExponentialNotation:
   Enabled: true
+Style/HashAsLastArrayItem:
+  Enabled: true
 Style/HashEachMethods:
+  Enabled: true
+Style/HashLikeCase:
   Enabled: true
 Style/HashTransformKeys:
   Enabled: true
@@ -43,6 +53,8 @@ Style/HashTransformValues:
 Style/RedundantAssignment:
   Enabled: true
 Style/RedundantFetchBlock:
+  Enabled: true
+Style/RedundantFileExtensionInRequire:
   Enabled: true
 Style/RedundantRegexpCharacterClass:
   Enabled: true
