--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,15 +20,33 @@ Layout/EmptyLinesAroundAttributeAccessor:
   Enabled: true
 Layout/SpaceAroundMethodCallOperator:
   Enabled: true
+Lint/BinaryOperatorWithIdenticalOperands:
+  Enabled: true
 Lint/DeprecatedOpenSSLConstant:
   Enabled: true
 Lint/DuplicateElsifCondition:
   Enabled: true
+Lint/DuplicateRescueException:
+  Enabled: true
+Lint/EmptyConditionalBody:
+  Enabled: true
+Lint/FloatComparison:
+  Enabled: true
+Lint/MissingSuper:
+  Enabled: true
 Lint/MixedRegexpCaptureTypes:
+  Enabled: true
+Lint/OutOfRangeRegexpRef:
   Enabled: true
 Lint/RaiseException:
   Enabled: true
+Lint/SelfAssignment:
+  Enabled: true
 Lint/StructNewOverride:
+  Enabled: true
+Lint/TopLevelReturnWithArgument:
+  Enabled: true
+Lint/UnreachableLoop:
   Enabled: true
 Style/AccessorGrouping:
   Enabled: true
@@ -38,7 +56,11 @@ Style/BisectedAttrAccessor:
   Enabled: true
 Style/CaseLikeIf:
   Enabled: true
+Style/ExplicitBlockArgument:
+  Enabled: true
 Style/ExponentialNotation:
+  Enabled: true
+Style/GlobalStdStream:
   Enabled: true
 Style/HashAsLastArrayItem:
   Enabled: true
@@ -49,6 +71,12 @@ Style/HashLikeCase:
 Style/HashTransformKeys:
   Enabled: true
 Style/HashTransformValues:
+  Enabled: true
+Style/OptionalBooleanParameter:
+  Enabled: true
+Style/SingleArgumentDig:
+  Enabled: true
+Style/StringConcatenation:
   Enabled: true
 Style/RedundantAssignment:
   Enabled: true
