--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "webpack": "^4.41.5"
   },
   "devDependencies": {
-    "babel-eslint": ">=10.0.3",
+    "@babel/core": ">=7.12.13",
+    "@babel/eslint-parser": ">=7.12.13",
     "eslint": ">=6.8.0",
     "eslint-config-standard": ">=14.1.0",
     "eslint-plugin-import": ">=2.20.1",
