--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": ">=5.12.0",
     "@rails/webpacker": ">=4.0.0",
-    "bootstrap": ">=4.4.1",
+    "bootstrap": "^4.6.0",
     "bootstrap.native": "^2.0.27",
     "bootstrap.native-loader": ">=2.0.0",
     "rails-ujs": ">=5.2.4-1",
