--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "striptags": ">=3.1.1",
     "turbolinks": ">=5.2.0",
     "uglify-js": ">=3.7.3",
-    "webpack": "^4.41.5"
+    "webpack": ">=4.41.5"
   },
   "devDependencies": {
     "@babel/core": ">=7.12.13",
