--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-import": ">=2.20.1",
     "eslint-plugin-node": ">=11.0.0",
     "eslint-plugin-promise": ">=4.2.1",
+    "webpack-cli": ">=4.7.0",
     "webpack-dev-server": ">=3.1.11"
   }
 }
