--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "striptags": ">=3.1.1",
     "turbolinks": ">=5.2.0",
     "uglify-js": ">=3.7.3",
-    "webpack": ">=4.41.5"
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@babel/core": ">=7.12.13",
@@ -22,7 +22,6 @@
     "eslint-plugin-import": ">=2.20.1",
     "eslint-plugin-node": ">=11.0.0",
     "eslint-plugin-promise": ">=4.2.1",
-    "webpack-cli": ">=4.7.0",
     "webpack-dev-server": ">=3.1.11"
   }
 }
