--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": ">=5.12.0",
+    "@popperjs/core": ">=2.9.2",
     "@rails/webpacker": ">=4.0.0",
-    "bootstrap": "^4.6.0",
-    "bootstrap.native": "^2.0.27",
-    "bootstrap.native-loader": ">=2.0.0",
-    "rails-ujs": ">=5.2.4-1",
+    "bootstrap": ">=4.6.0",
+    "rails-ujs": ">=5.2.6",
     "stimulus": ">=1.1.0",
     "striptags": ">=3.1.1",
     "turbolinks": ">=5.2.0",
-    "uglify-js": ">=3.7.3",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
