--- a/package.json
+++ b/package.json
@@ -17,11 +17,8 @@
   "devDependencies": {
     "@babel/core": ">=7.12.13",
     "@babel/eslint-parser": ">=7.12.13",
-    "eslint": ">=6.8.0",
-    "eslint-config-standard": ">=14.1.0",
-    "eslint-plugin-import": ">=2.20.1",
-    "eslint-plugin-node": ">=11.0.0",
-    "eslint-plugin-promise": ">=4.2.1",
+    "prettier": ">=2.3.2",
+    "standard": ">=16.0.3",
     "webpack-dev-server": ">=3.1.11"
   }
 }
