FIx RuboCop warning

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,8 @@ Metrics/AbcSize:
   Enabled: false
 Metrics/BlockLength:
   Enabled: false
+Metrics/ClassLength:
+  Enabled: false
 Metrics/MethodLength:
   Enabled: false
 Style/AsciiComments:
