--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@rails/webpacker": ">=4.0.0",
     "bootstrap": ">=4.6.0",
     "rails-ujs": ">=5.2.6",
-    "stimulus": "^2.0.0",
+    "stimulus": ">=3.0.0",
     "striptags": ">=3.1.1",
     "turbolinks": ">=5.2.0",
     "webpack": "^4.46.0"
