--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@babel/core": ">=7.12.13",
     "@babel/eslint-parser": ">=7.12.13",
     "prettier": ">=2.3.2",
-    "standard": ">=16.0.3",
-    "webpack-dev-server": ">=3.1.11"
+    "standard": ">=16.0.3"
   }
 }
