--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": ">=5.12.0",
+    "@hotwired/stimulus": ">=3.0.0",
+    "@hotwired/stimulus-webpack-helpers": ">=1.0.1",
     "@popperjs/core": ">=2.9.2",
     "@rails/webpacker": ">=4.0.0",
     "bootstrap": ">=4.6.0",
     "rails-ujs": ">=5.2.6",
-    "stimulus": "^2.0.0",
     "striptags": ">=3.1.1",
     "turbolinks": ">=5.2.0",
     "webpack": "^4.46.0"
