--- a/package.json
+++ b/package.json
@@ -2,21 +2,22 @@
   "name": "utakata",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": ">=5.12.0",
-    "@hotwired/stimulus": ">=3.0.0",
-    "@hotwired/stimulus-webpack-helpers": ">=1.0.1",
-    "@popperjs/core": ">=2.9.2",
-    "@rails/webpacker": ">=4.0.0",
-    "bootstrap": ">=4.6.0",
-    "rails-ujs": ">=5.2.6",
-    "striptags": ">=3.1.1",
-    "turbolinks": ">=5.2.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@hotwired/stimulus": "^3.0.1",
+    "@hotwired/stimulus-webpack-helpers": "^1.0.1",
+    "@popperjs/core": "^2.10.2",
+    "@rails/webpacker": "^5.4.3",
+    "bootstrap": "^5.1.3",
+    "rails-ujs": "^5.2.6",
+    "striptags": "^3.2.0",
+    "turbolinks": "^5.2.0",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@babel/core": ">=7.12.13",
-    "@babel/eslint-parser": ">=7.12.13",
-    "prettier": ">=2.3.2",
-    "standard": ">=16.0.3"
+    "@babel/core": "^7.15.8",
+    "@babel/eslint-parser": "^7.15.8",
+    "eslint": "^8.0.1",
+    "prettier": "^2.4.1",
+    "standard": "^16.0.4"
   }
 }
