--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/eslint-parser": "^7.15.8",
-    "eslint": "^8.1.0",
+    "eslint": "~7.18.0",
     "prettier": "^2.4.1",
     "standard": "^16.0.4"
   }
