--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "utakata",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/stimulus-webpack-helpers": "^1.0.1",
     "@popperjs/core": "^2.10.2",
     "@rails/webpacker": "^5.4.3",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.6.1",
     "rails-ujs": "^5.2.6",
     "striptags": "^3.2.0",
     "turbolinks": "^5.2.0",
