--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,10 @@
-#
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  host: localhost
+  host: <%= ENV.fetch('DATABASE_HOST') { 'localhost' } %>
+  password: <%= ENV.fetch('DATABASE_PASSWORD') { '' } %>
+  pool: <%= ENV.fetch('RAILS_MAX_THREADS') { 5 } %>
+  username: <%= ENV.fetch('DATABASE_USER') { 'root' } %>
 
 development:
   <<: *default
