--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/stimulus-webpack-helpers": "^1.0.1",
+    "@hotwired/turbo": "^7.1.0",
+    "@hotwired/turbo-rails": "^7.1.0",
     "@popperjs/core": "^2.10.2",
     "@rails/webpacker": "^5.4.3",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.1",
-    "rails-ujs": "^5.2.6",
     "striptags": "^3.2.0",
-    "turbolinks": "^5.2.0",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
