--- a/package.json
+++ b/package.json
@@ -2,22 +2,37 @@
   "name": "utakata",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/stimulus-webpack-helpers": "^1.0.1",
     "@hotwired/turbo": "^7.1.0",
     "@hotwired/turbo-rails": "^7.1.1",
     "@popperjs/core": "^2.11.2",
-    "@rails/webpacker": "^5.4.3",
+    "babel-loader": "^8.2.3",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "css-loader": "^6.7.1",
+    "mini-css-extract-plugin": "^2.6.0",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
     "striptags": "^3.2.0",
-    "webpack": "^4.46.0"
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-remove-empty-scripts": "^0.7.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
     "@babel/eslint-parser": "^7.17.0",
     "eslint": "~7.18.0",
     "prettier": "^2.5.1",
     "standard": "^16.0.4"
+  },
+  "scripts": {
+    "build": "webpack --config ./config/webpack/webpack.config.js"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
   }
 }
