開発環境でファイル変更時にWebpackコンパイルが走るようにする

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       DATABASE_USER: 'postgres'
     depends_on:
       - db
-    command: ['bin/rails', 'server', '-b', '0.0.0.0']
+    command: ['bin/dev']
     ports:
       - '3000:3000'
     user: root
