--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,7 @@ AllCops:
     - 'bin/setup'
     - 'db/schema.rb'
     - 'node_modules/node-sass/src/libsass/**/*'
+    - 'vendor/**/*'
 Metrics/AbcSize:
   Enabled: false
 Metrics/BlockLength:
