--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "@hotwired/turbo": "^7.1.0",
     "@hotwired/turbo-rails": "^7.1.1",
     "@popperjs/core": "^2.11.5",
-    "babel-loader": "^8.2.4",
+    "babel-loader": "^8.2.5",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "css-loader": "^6.7.1",
     "mini-css-extract-plugin": "^2.6.0",
-    "sass": "^1.50.0",
+    "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "striptags": "^3.2.0",
     "webpack": "^5.72.0",
@@ -23,9 +23,9 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
-    "eslint": "~7.18.0",
+    "eslint": "^8.14.0",
     "prettier": "^2.6.2",
-    "standard": "^16.0.4"
+    "standard": "^17.0.0"
   },
   "scripts": {
     "build": "webpack --config ./config/webpack/webpack.config.js"
