--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,10 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: <%= ENV.fetch('DATABASE_HOST') { 'localhost' } %>
-  password: <%= ENV.fetch('DATABASE_PASSWORD') { '' } %>
-  pool: <%= ENV.fetch('RAILS_MAX_THREADS') { 5 } %>
-  username: <%= ENV.fetch('DATABASE_USER') { 'root' } %>
+  host: <%= ENV.fetch('DATABASE_HOST', 'localhost') %>
+  password: <%= ENV.fetch('DATABASE_PASSWORD', '') %>
+  pool: <%= ENV.fetch('RAILS_MAX_THREADS', 5) %>
+  username: <%= ENV.fetch('DATABASE_USER', 'root') %>
 
 development:
   <<: *default
