--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@babel/eslint-parser": "^7.18.2",
     "eslint": "^8.17.0",
     "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.5",
+    "eslint-plugin-promise": "^6.0.1",
     "prettier": "^2.6.2"
   },
   "scripts": {
