--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "compression-webpack-plugin": "^10.0.0",
     "css-loader": "^6.7.1",
     "mini-css-extract-plugin": "^2.6.1",
+    "purgecss-webpack-plugin": "^5.0.0",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "striptags": "^3.2.0",
