--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,6 +23,6 @@ Rails/SkipsModelValidations:
 Style/AsciiComments:
   Enabled: false
 Style/ClassAndModuleChildren:
-  EnforcedStyle: compact
+  Enabled: false
 Style/Documentation:
   Enabled: false
