--- a/compose.yml
+++ b/compose.yml
@@ -17,6 +17,7 @@ services:
       DATABASE_HOST: 'db'
       DATABASE_PASSWORD: 'password'
       DATABASE_USER: 'postgres'
+      RUBYOPT: '--yjit'
     depends_on:
       - db
     command: /bin/sh -c 'rm -f /app/tmp/pids/server.pid && bundle exec foreman start -f Procfile.dev'
