build: fix rubocp rule

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,6 +23,6 @@ Rails/SkipsModelValidations:
 Style/AsciiComments:
   Enabled: false
 Style/ClassAndModuleChildren:
-  Enabled: false
+  EnforcedStyle: compact
 Style/Documentation:
   Enabled: false
