--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "prettier": "^2.8.4"
   },
   "scripts": {
-    "build": "webpack --config ./config/webpack/webpack.config.js"
+    "build": "webpack --config ./config/webpack/webpack.config.js",
+    "lint": "eslint --max-warnings 0 app config"
   },
   "babel": {
     "presets": [
