--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,5 +23,5 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: rm -rf node_modules && yarn install --frozen-lockfile
+      - run: yarn install
       - run: yarn run lint
