--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@babel/eslint-parser": "^7.23.10",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-config-xo-space": "^0.35.0",
+    "eslint-config-xo": "^0.44.0",
     "prettier": "^3.2.5"
   },
   "scripts": {
