fix: fix compose.yml

--- a/compose.yml
+++ b/compose.yml
@@ -20,7 +20,7 @@ services:
       RUBYOPT: '--yjit'
     depends_on:
       - db
-    command: /bin/sh -c 'rm -f /app/tmp/pids/server.pid && bundle exec foreman start -f Procfile.dev'
+    command: /bin/sh -c 'rm -f /app/tmp/pids/server.pid && exec bundle exec foreman start -f Procfile.dev'
     ports:
       - '3000:3000'
     user: root
