--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,12 +5,14 @@
 
 version: 2
 updates:
-  - package-ecosystem: "bundler"
-    directory: "/"
+  - package-ecosystem: 'bundler'
+    directory: '/'
     schedule:
-      interval: "daily"
-  - package-ecosystem: "npm"
-    directory: "/"
+      interval: 'daily'
+  - package-ecosystem: 'npm'
+    directory: '/'
     schedule:
-      interval: "daily"
- 
+      interval: 'daily'
+    ignore:
+      - dependency-name: 'eslint'
+        versions: ['9.x']
