--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "scripts": {
     "build": "webpack --config ./config/webpack/webpack.config.js",
+    "build:watch": "webpack --config ./config/webpack/webpack.config.js --watch",
     "lint": "eslint --max-warnings 0 app config"
   },
   "babel": {
