build: fix .rubocp.yml

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,9 @@
 require:
+  - rubocop-thread_safety
+
+plugins:
   - rubocop-performance
   - rubocop-rails
-  - rubocop-thread_safety
 
 AllCops:
   NewCops: enable
