--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -31,4 +31,4 @@ jobs:
       - name: Install dependencies
         run: bundle install
       - name: Run RuboCop
-        run: rubocop
+        run: bin/rubocop --parallel
